# zowe-gui

./: DESIGN_DOC.md  README.md  package-lock.json
pipe/: tauriNodeComm
tauriApp/: package-lock.json  package.json  vite.config.ts
tauriApp/src/: styles.css
tauriApp/src-tauri/: Cargo.toml  tauri.conf.json
tauriApp/src-tauri/src/: comm.rs  main.rs
tauriApp/src/routes/: +page.svelte
tauriApp/src/routes/components/: AddProfile.svelte  ReviewConfig copy.svelte  ReviewConfig.svelte  SystemConfig.svelte  ThemeToggle.svelte  WelcomeScreen.svelte
zowe-cli/: npm-shrinkwrap.json  package.json
zowe-cli/zowex/: Cargo.toml
zowe-cli/zowex/src/: comm.rs
