[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

[dependencies]
tauri = { version = "1.5.4", features = ["api-all"] }
tokio = { version = "1.24", features = ["full"] }
windows = { version = "0.36", features = ["Foundation", "Win32_Foundation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
